--- a/20191216_html/index.html
+++ b/20191216_html/index.html
@@ -2,9 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>float</title>
+  <style>
+    div.container{
+      background-color: skyblue;
+    }
+    div img{
+      width: 200px; display: block;
+      float:left;
+    }
+    
+    div.container:after{
+      content:"";display: block; clear: both;
+    }
+    
+  </style>
+  
+  
 </head>
 <body>
-  test
+   <div class="container">
+     <img src="../images/testimg01.jpg" alt="">
+     <img src="../images/testimg01.jpg" alt="">
+     <img src="../images/testimg01.jpg" alt="">
+     <!--에프터의위치-->
+   </div>
+   <div>Lorem ipsum dolor sit amet.</div>
 </body>
 </html>
