--- a/20191219_position/index.html
+++ b/20191219_position/index.html
@@ -27,9 +27,10 @@
 		#header>nav.nav>ul>li>a:hover{background-color: orange; }
 		/* header end */
 
-		div.slider img{width: 100%;}
-
+		
 		div.visual{width: 1000px; margin: 0 auto;}
+
+		div.slider img{width: 100%;}
 
 		.bx-wrapper {
     -moz-box-shadow: none;
@@ -48,13 +49,13 @@
 		
 	</style>
 	
-	script
+	<!-- script -->
 	<script>
 		$(document).ready(function(){
 			$(".slider").bxSlider();
 		});
 	</script>
-	script end
+	<!-- script end -->
 </head>
 
 <body>
