--- a/01site/01himedia/index.html
+++ b/01site/01himedia/index.html
@@ -34,16 +34,115 @@
 		<div class="main_bottom"> <!-- w100 -->
 			<nav class="main_gnb"> <!-- w980 m0 auto -->
 				<ul class="clearfix">
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
+					<li><a href="#">회사소개</a></li>
+					<li><a href="#">제품소개</a></li>
+					<li><a href="#">사업영역</a></li>
+					<li><a href="#">고객센터</a></li>
+					<li><a href="#">사회공헌</a></li>
+					<li><a href="#">인재채용</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
+
+	<div class="visual_wrap"> <!-- w100% -->
+		<div class="visual"> <!-- w980px -->
+				<img src="images/visual_text01.png.png" alt="next energy" class="visual_text">
+				<img src="images/visual_img01.png.png" alt="light" class="visual_img">
+			
+		</div>
+	</div>
+	<!-- section start -->
+	<section id="container_wrap">
+		<div class="container">
+			<ul class="clearfix">
+				<li >
+					<div class="icon" onclick="location.href='http://www.naver.com'">
+						<img src="images/img01.png" alt="사회공헌">
+						<div class="icontext">
+							<h3>사회공헌</h3>
+							<p>소외된 이웃과 함께합니다.</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="icon">
+						<img src="images/img02.png" alt="사회공헌">
+						<div class="icontext">
+							<h3>사회공헌</h3>
+							<p>소외된 이웃과 함께합니다.</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="icon">
+						<img src="images/img03.png" alt="사회공헌">
+						<div class="icontext">
+							<h3>사회공헌</h3>
+							<p>소외된 이웃과 함께합니다.</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="icon">
+						<img src="images/img04.png" alt="사회공헌">
+						<div class="icontext">
+							<h3>사회공헌</h3>
+							<p>소외된 이웃과 함께합니다.</p>
+						</div>
+					</div>
+				</li>
+				<li>
+					<div class="icon">
+						<img src="images/img05.png" alt="사회공헌">
+						<div class="icontext">
+							<h3>사회공헌</h3>
+							<p>소외된 이웃과 함께합니다.</p>
+						</div>
+					</div>
+				</li>
+			</ul>
+		</div>	
+	</section>
+	<!-- section end -->
+
+	<article>
+		<article id="container">
+			<ul class="clearfix">
+				<li>
+					<div class="card">
+						<img src="images/content01.png" alt="회사개요">
+						<div class="cardbody">
+							<h3>회사개요</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, enim.</p>
+						</div>
+
+					</div>
+				</li>
+				<li>
+					<div class="card">
+						<img src="images/content02.png" alt="회사개요">
+						<div class="cardbody">
+							<h3>사업분야</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, enim.</p>
+						</div>
+
+					</div>
+				</li>
+				<li>
+					<div class="card">
+						<img src="images/content03.png" alt="회사개요">
+						<div class="cardbody">
+							<h3>환경경영</h3>
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, enim.</p>
+						</div>
+
+					</div>
+				</li>
+				
+			</ul>
+		</article>
+	</article>
 	
 </body>
 </html>
