--- a/01site/01himedia/indextest.html
+++ b/01site/01himedia/indextest.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
 	<meta charset="UTF-8">
 	<title>himediatest</title>
 	<link rel="stylesheet" href="css/reset.css">
-	<style>
-		/* style.css */
-		*{margin: 0; padding: 0;}
-		li{list-style: none;}
-		a:visited, a:link{text-decoration: none; color:#000;}
-		.clearfix{content:""; display: block; clear: both;}
-		/* style.css end */
-
-		header#main_header{background-color: skyblue;}
-		#main_header>div.main_util{border-bottom: 1px solid #ddd;}
-		#main_header>div.main_util>nav.main_util1{}
-		nav.main_util1>ul{}
-		nav.main_util1>ul>li{}
-		nav.main_util1>ul>li>a{}
-
-
-
-	</style>
+	<link rel="stylesheet" href="styletest.css">
 </head>
+
 <body>
 	<header id="main_header">
 		<div class="main_util">
-			<nav class="main_util1">
-				<ul>
+			<nav class="util_menu clearfix" >
+				<ul class="clearfix">
 					<li><a href="#">menu</a></li>
 					<li><a href="#">menu</a></li>
 					<li><a href="#">menu</a></li>
 					<li><a href="#">menu</a></li>
 				</ul>
 			</nav>
+		</div>
+
+		<div class="main_middle">
+			
 		</div>
 
 
