--- a/01site/01himedia/indextest.html
+++ b/01site/01himedia/indextest.html
@@ -20,10 +20,13 @@
 			</nav>
 		</div>
 
-		<div class="main_middle">
-			
+		<!-- <div class="main_middle">
+				<h1>하이미디어</h1>
+			<div class="toggle_menu">
+				<img src="images/toggle_btn01.jpg" alt="더보기">
+			</div>
 		</div>
-
+		 -->
 
 
 	</header>
