--- a/01site/01himedia/indextest.html
+++ b/01site/01himedia/indextest.html
@@ -8,27 +8,43 @@
 </head>
 
 <body>
-	<header id="main_header">
-		<div class="main_util">
-			<nav class="util_menu clearfix" >
+	<div id="header">
+		<div class="header_line">
+			<nav class="header_top clearfix">
 				<ul class="clearfix">
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
-					<li><a href="#">menu</a></li>
+					<li>menu</li>
+					<li>menu</li>
+					<li>menu</li>
+					<li>menu</li>
 				</ul>
 			</nav>
 		</div>
 
-		<!-- <div class="main_middle">
-				<h1>하이미디어</h1>
-			<div class="toggle_menu">
-				<img src="images/toggle_btn01.jpg" alt="더보기">
-			</div>
+		<div class="header_mid">
+			<h1>하이미디어</h1>
+			<img src="images/toggle_btn01.jpg" alt="메뉴">
 		</div>
-		 -->
 
+		<div class="header_foot">
+			<ul class]"clearfix">
+				<li>menu</li>
+				<li>menu</li>
+				<li>menu</li>
+				<li>menu</li>
+				<li>menu</li>
+				<li>menu</li>
+			</ul>
+		</div>
+	</div>
 
-	</header>
+	<div id="visual">
+		<div class="visual_main">
+			<img src="images/visual_img01.png.png" alt="lifht">
+			<img src="images/visual_text01.png.png" alt="nextenergy">
+			
+		</div>
+	</div>
+
+	
 </body>
 </html>
