--- a/01site/01himedia/indextest.html
+++ b/01site/01himedia/indextest.html
@@ -45,6 +45,26 @@
 		</div>
 	</div>
 
+	<div id="container">
+		<div class="container_main">
+			<ul>
+				<li>
+					<div class="icon">
+						<img src="images/img.01.png" alt="사회공헌">
+					<div class="icontext">
+						<h3>사회공헌</h3>
+						<p>소외된 이웃과 함께합니다.</p>
+					</div>
+					</div>
+				</li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</div>
+	</div>
+
 	
 </body>
 </html>
