--- a/bxslider/indextest02.html
+++ b/bxslider/indextest02.html
@@ -54,3 +54,77 @@
 </body>
 </html>
 
+
+<script>
+	var $(document).ready(function(){
+		$(".slider").bxSlider();
+	});
+</script>
+
+<script>
+	function dLink(){
+		location href="http://www.naver.com"
+	}
+</script>
+	<div onclick="dLink();"></div>
+
+	<script>
+		$(document).ready(function(){
+			var= mySlide $(".slider").bxSlider();
+			auto:true;
+			pager:false;
+		});
+
+		$(".nextBtn").click(function(){
+			myslide.goToNextSlide();
+		});
+	</script>
+
+
+<script>
+	$(document).ready(function(){
+		$(".선택자").bxSlider();
+	});
+</script>
+
+<script>
+	function dLink(){
+		location href ="http://www.naver.com"
+	}
+</script>
+
+<div onclick="dLink();"></div>
+
+<script>
+	function dLink(){
+		location href="http://www.naver.com"
+	}
+</script>
+
+<div onclick="dLink();"></div>
+
+<script>
+	function dLink(){
+		location href="http://naver.con"
+	}
+</script>
+
+<div onclick="dLink();"></div>
+
+<script>
+	$(document).ready(function(){
+		var=ddugguri $(".slide")bxSlide();
+	})
+</script>
+
+<script>
+	$(document).ready(function(){
+		$(".선택자").bxSlider();
+	});
+</script>
+
+<script>
+	$(document).click((){
+		
+	})
+</script>
