--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<title>mysite</title>
 </head>
 <body>
-	test
+	<a href="20191216_html/">
+	20191216 float</a>
+	<a href="20191216_html/menu.html">
+	20191216 float menu</a>
 </body>
 </html>
