--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>mysite</title>
 </head>
 <body>
+	mysite - <a href="01site/01himedia/">himedia</a>
 	<a href="20191216_html/">
 	20191216 float</a>
 	<a href="20191216_html/menu.html">
