--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 	<title>mysite</title>
 </head>
 <body>
-	mysite - <a href="01site/01himedia/">himedia</a>
+	mysite -
+	<a href="01site/01himedia/">himedia</a><br>
 	<a href="20191216_html/">
-	20191216 float</a>
+	20191216 float</a><br>
 	<a href="20191216_html/menu.html">
-	20191216 float menu</a>
+	20191216 float menu</a><br>
 </body>
 </html>
