--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
 <body>
 	mysite -
 	<a href="01site/01himedia/">himedia</a><br>
-	<a href="20191216_html/">
-	20191216 float</a><br>
-	<a href="20191216_html/menu.html">
-	20191216 float menu</a><br>
+	<a href="20191216_html/">20191216 float</a><br>
+	<a href="20191216_html/menu.html">20191216 float menu</a><br>
 </body>
 </html>
