--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 <body>
 	mysite -
 	<a href="01site/01himedia/">himedia</a><br>
-	<a href="20191216_html/">20191216 float</a><br>
-	<a href="20191216_html/menu.html">20191216 float menu</a><br>
+	<a href="20191216_float/index.html/">20191216 float</a><br>
+	<a href="20191216_float/menu.html/">20191216 float menu</a><br>
+	<a href="20191217_layout/index01.html/">20191217 layout01</a><br>
+	<a href="20191217_layout/index02.html/">20191217 layout02</a><br>
+	<a href="20191217_layout/layout.html/">20191217 layout gallery</a><br>
+	<a href="20191217_layout/layout01.html/">20191217 layout header01</a><br>
+	<a href="20191217_layout/layout01test01.html/">20191217 layout header02</a><br>
+	<a href="20191217_layout/layout01test02.html/">20191217 layout header03</a><br>
+	<a href="20191218_layout/index.html/">20191218 layout 적용</a><br>
+	<a href="20191219_position/index.html/">20191219 position</a><br>
+	<a href="20191219_position/position.html/">20191219 positiontest01</a><br>
+	<a href="20191219_position/positiontest.html/">20191219 positiontest02</a><br>
+	<a href="20191220_position/index.html/">20191220 position</a><br>
+	<a href="20191220_position/layout.html/">2019120 position 헤더적용</a><br>
+	<a href="20191226_sprite/form.html/">20191226 회원가입양식</a><br>
+	<a href="20191226_sprite/index.html/">20191226 sprite naver 메뉴설정</a><br>
+	<a href="20191226_sprite/index.html/">20191226 sprite 메뉴설정</a><br>
+	<a href="20191227_table/index.html/">20191227 표 양식</a><br>
+	<a href="bxslider/index.html/">20191230 bxslider</a><br>
+	<a href="bxslider/indextest.html/">20191230 bxslider 연습01</a><br>
+	<a href="bxslider/indextest02.html/">20191231 bxslider 연습02</a><br>
+	<a href="bxslider/visual_slide.html/">20191231 bxslider에 text. peger 넣기</a><br>
+	<a href="20200102_animation/index.html/">20200102 animation</a><br>
+
 </body>
 </html>
