--- a/01site/01himedia/index.html
+++ b/01site/01himedia/index.html
@@ -144,7 +144,7 @@
 		</article>
 		
 		<article id="containerOne">
-			<ul>
+			<ul class="clearfix">
 				<li>
 					<div class="card">
 						<img src="images/content04.png" alt="사보">
@@ -177,6 +177,27 @@
 				</li>
 			</ul>
 		</article>
+
+		<footer id="main_footer">
+			<div class="footerWrap">
+				<div class="footer">
+					<ul clearfix>
+						<li><a href="#">개인정보 취급방침</a></li>
+						<li><a href="#">이메일주소 무단 수집 거부</a></li>
+						<li><a href="#">패밀리 사이트</a></li>
+					</ul>
+				</div>
+			</div>
+			<div class="footerAdd clearfix">
+				<h2>하이미디어</h2>
+				<address class="footer_text">
+					<p>하이미디어</p>
+					<p>대표 : 홍길동 | 사업자번호 : 000.00.0000 | 주소 : 서울시 영등포구 대림동</p>
+					<p>Tel : 02-000-0000 , Fax : 02-000-0000 , e-mail : abc@abc.com</p>
+					copyright(c)2019. himedia All right reserved.
+				</address>
+			</div>
+		</footer>
 	
 	
 </body>
