--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
 	mysite -
 	<a href="01site/01himedia/">하이미디어</a><br>
-	<a href="01site/02koreauniv/">한국대학교</a>
+	<a href="01site/02koreauniv/">한국대학교</a><br>
+	<a href="02php/">ftp 및 서브페이지 연습</a>
 	<a href="20191216_float/index.html/">20191216 float</a><br>
 	<a href="20191216_float/menu.html/">20191216 float menu</a><br>
 	<a href="20191217_layout/index01.html/">20191217 layout01</a><br>
