--- a/01site/02koreauniv/index.html
+++ b/01site/02koreauniv/index.html
@@ -16,6 +16,7 @@
 		
 	</style>
 </head>
+
 <body>
 	
 	<header id="header">
@@ -106,19 +107,64 @@
 					<!-- 컨테이너2끝 -->
 					<!-- 컨테이너3시작 -->
 					<li>
-							<div class="textWrap03">
-								<p>HOT LINK</p>
-								<ul class="clearfix">
-									<li><a href="#"><img src="images/icon05.jpg" alt=""></a></li>
-									<li><a href="#"><img src="images/icon06.jpg" alt=""></a></li>
-									<li><a href="#"><img src="images/icon07.jpg" alt=""></a></li>
-								</ul>
-							</div>
+								<div class="textWrap03">
+									<p>HOT LINK</p>
+									<ul class="clearfix">
+										<li><a href="#"><img src="images/icon05.jpg" alt=""></a></li>
+										<li><a href="#"><img src="images/icon06.jpg" alt=""></a></li>
+										<li><a href="#"><img src="images/icon07.jpg" alt=""></a></li>
+									</ul>
+								</div>
 					</li>
 					<!-- 컨테이너3끝 -->
 					<!-- 컨테이너4시작 -->
-					
+					<li>
+						<div class="textWrap04 clearfix">
+							<p>공지사항</p>
+							<ul class="contents01">
+								<li>[공지] 한국대학교 웹진...</li>
+								<li>[보도] 우수대학교 선정 수상</li>
+								<li>[공지] 대학입시 설명회</li>
+								<li>[공지] 2019년 1학기 성적...</li> 
+							</ul>
+							<ul class="contents02">
+								<li>2019-06-12</li>
+								<li>2019-06-14</li>
+								<li>2019-06-16</li>
+								<li>2019-04-18</li>
+							</ul>
+						</div>
+					</li>
 					<!-- 컨테이너4끝 -->
+					<!-- 컨테이너5시작 -->
+					<li>
+						<div class="textWrap05">
+							<p>SNS NEWS</p>
+							<div class="contents03 clearfix">
+								<img src="images/bg07.jpg" alt="">
+								<p>한국 대학교는 <br>
+								 2017학년도 신입생<br>
+								입학식을 3월 2일(목)<br>
+								본교 종합체육관...</p>
+								<ul clearfix>
+								<li><a href="#"><img src="images/facebook.jpg" alt=""></a></li>
+								<li><a href="#"><img src="images/twitter.jpg" alt=""></a></li>
+								<li><a href="#"><img src="images/google.jpg" alt=""></a></li>
+								<li><a href="#"><img src="images/youtube.jpg" alt=""></a></li>
+								</ul>
+							</div>
+						</div>
+					</li>
+					<!-- 컨테이너5끝 -->
+					<!-- 컨테이너6시작 -->
+					<li>
+						<div class="textWrap06">
+							<img src="images/bg04.jpg" alt="">
+							<a href="#">캠퍼스 투어</a>
+						</div>
+					</li>
+					<!-- 컨테이너6끝 -->
+
 				</ul>
 		</div>
 	</div>
