--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>mysite</title>
 </head>
 <body>
-	mysite -
+	mysite - <br>
 	<a href="01site/01himedia/">하이미디어</a><br>
 	<a href="01site/02koreauniv/">한국대학교</a><br>
 	<a href="02php/">ftp 및 서브페이지 연습</a><br>
