--- a/20200102_animation/index.html
+++ b/20200102_animation/index.html
@@ -18,12 +18,12 @@
 		animation-delay:2s; /* 지연시간 */
 		animation-timing-function:linear; 
 		}
-		@keyframes myani{
+		/*@keyframes myani{
 			from{top: 0; width: 200px; height: 200px; background-color: skyblue; left: 0;}
 			25%{left: 300px;}
 			50%{left: 200px;}
 			100%{top: 500px; width: 500px; height: 500px; background-color: yellow; left: 0;}
-		}
+		}*/
 
 
 
