--- a/01site/06.seoulbotanicpark/index.html
+++ b/01site/06.seoulbotanicpark/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
    <meta charset="UTF-8">
    <title>서울식물원</title>
    <link rel="stylesheet" href="css/jquery.bxslider.css">
@@ -18,21 +19,53 @@
       		   <h1><a href="index.html"><img src="images/logo.png" alt="서울식물원"></a></h1>
       		   <nav class="gnb">
       		      <ul class="clearfix">
-      		         <li><a href="sub_index.html">식물원이야기</a>
-                        <!-- <ul class="submenu">
-                           <li>이용안내</li>
-                           <li>방문안내</li>
-                           <li>식물원소개</li>
-                           <li>새소식</li>
-                        </ul> -->
+      		         <li ><a href="sub_story.html">식물원이야기</a>
+                        <ul class="sub_menu clearfix">
+                           <li><a href="sub_story.html">이용안내</a></li>
+                           <li><a href="sub_story02.html">방문안내</a></li>
+                           <li><a href="sub_story03.html">식물원소개</a></li>
+                           <li><a href="sub_story04.html">새소식</a></li>
+                        </ul>
                      </li>
-      		         <li><a href="#">둘러보기</a></li>
-      		         <li><a href="#">이용하기</a></li>
-      		         <li><a href="#">참여하기</a></li>
-      		         <li><a href="#">식물정보</a></li>
-      		         <li><a href="#"><img src="images/icon_menu.png" alt="메뉴보기"></a></li>
+      		         <li ><a href="sub_look.html">둘러보기</a>
+                        <ul class="sub_menu clearfix">
+                           <li><a href="sub_look.html">열린숲</a></li>
+                           <li><a href="sub_look02.html">주제원</a></li>
+                           <li><a href="sub_look03.html">호수원</a></li>
+                           <li><a href="sub_look04.html">습지원</a></li>
+                           <li><a href="sub_look05.html">전시안내</a></li>
+                        </ul>
+                     </li>
+      		         <li ><a href="sub_use.html">이용하기</a>
+                        <ul class="sub_menu clearfix">
+                           <li><a href="sub_use.html">식물문화센터</a></li>
+                           <li><a href="sub_use02.html">편의시설</a></li>
+                           <li><a href="sub_use03.html">씨앗도서관</a></li>
+                           <li><a href="sub_use04.html">정원지원실</a></li>
+                        </ul>
+                     </li>
+      		         <li ><a href="sub_join.html">참여하기</a>
+                        <ul class="sub_menu clearfix">
+                           <li><a href="sub_join.html">교육프로그램</a></li>
+                           <li><a href="sub_join02.html">참여하기</a></li>
+                           <li><a href="https://issbp.botanicpark.co.kr/" style="color:#ffc123">서울식물원국제심포지엄</a></li>
+                        </ul>
+                     </li>
+      		         <li ><a href="sub_plant.html">식물정보</a>
+                        <ul class="sub_menu clearfix">
+                           <li><a href="sub_plant.html">식물연구소소개</a></li>
+                           <li><a href="sub_plant02.html">이달의식물</a></li>
+                           <li><a href="sub_plant03.html">식물가꾸기</a></li>
+                        </ul>
+                     </li>
       		      </ul>
       		   </nav>
+               <div class="toggleMenu">
+                  <div class="bar1"></div>
+                  <div class="bar2"></div>
+                  <div class="bar3"></div>
+               </div>
+
       		</div>
       		
       		<div class="first wow fadeInDown" data-wow-duration="2s">
@@ -341,24 +374,24 @@
       <img class="trees" src="images/trees.png" alt="후터배경">
       <div class="call">
          <p class="fs28">다산콜센터</p>
-         <p class="fs28">문의</p>
-         <p class="fs50">120</p>
-         <p class="fs20">정보를 못 찾으셨나요?</p>
-         <p class="fs20">120다산콜센터로 물어보세요!</p>
+        <p class="fs28">문의</p>
+        <p class="fs50">120</p>
+        <p class="fs20">정보를 못 찾으셨나요?</p>
+        <p class="fs20">120다산콜센터로 물어보세요!</p>
       </div>
       <img src="images/icon_call.png" alt="다산콜" class="dscall wow swing" data-wow-duration="2s" data-wow-iteration="5" data-wow-offset="30">
       
       <div class="ftext">
          <div class="pb20">
-            <a href="#"><p>  개인정보처리방침 </p></a>
-            <a href="#"><p> 저작권정책 </p></a>
-            <a href="#"><p class="brnone"> 영상정보처리기기 운영관리방침 </p></a>
+            <a href="http://www.seoul.go.kr/helper/privacy.do?tr_code=footer_02"><p>  개인정보처리방침 </p></a>
+            <a href="https://www.seoul.go.kr/common/errorAccess.html"><p> 저작권정책 </p></a>
+            <a href="https://www.seoul.go.kr/common/errorAccess.html"><p class="brnone"> 영상정보처리기기 운영관리방침 </p></a>
          </div>
-         <a href="#"><p> 홈페이지바로잡기 </p> </a>
-         <a href="#"><p class="brnone">행정서비스 헌장 </p></a>
+         <a href="https://www.seoul.go.kr/homepageCorrect/user/hpCorrect.do"><p> 홈페이지바로잡기 </p> </a>
+         <a href="http://eungdapso.seoul.go.kr/Gud/Gud03/Gud0304/Gud0304_not.jsp"><p class="brnone">행정서비스 헌장 </p></a>
          <p>CopyrightⓒDajung Yoon all rights reserved.</p>
       </div>
-      <img src="images/mark.png" alt="wamark" class="wamark">
+      <a href="http://www.webwatch.or.kr/Situation/WA_Situation.html?MenuCD=110"><img src="images/mark.png" alt="wamark" class="wamark"></a>
    </footer>
 
 
@@ -414,6 +447,29 @@
       // 450
       $(".bslider").bxSlider({
          auto:true,
+      });
+
+      $(".toggleMenu").click(function(){
+         var myClass= $(this).attr("class"); //$(".toggleMenu")와 같다//
+         console.log(myClass)
+         if(myClass == "toggleMenu"){
+            $(".toggleMenu").addClass("change");
+            $(".gnb").stop().animate({left:0},300)
+         }else{
+            $(".toggleMenu").removeClass("change");
+            $(".gnb").stop().animate({left:"-100%"},300)
+         }
+      });
+      $(window).resize(function(){
+         var Wsize =$(window).width();
+         console.log(Wsize);
+         if (Wsize>960){
+            $(".header_top").find(".toggleMenu").removeClass("change");
+            $(".gnb").css({left:0});
+         }else{
+            $(".header_top").find(".toggleMenu").removeClass("change");
+            $(".gnb").css({left:"-100%"});
+         }
       });
 
     });
