--- a/03script/20200212_jquery/jquery.tab.html
+++ b/03script/20200212_jquery/jquery.tab.html
@@ -25,7 +25,7 @@
 				$(this).addClass("active");
 				// $(".contentWrap>ul>li").eq(liNum).addClass("active");
 				$(".contentText>div").hide();
-				$(".contentText>div").eq(liNum).show();
+				$(".contentText>div").eq(liNum).fadeIn();
 			});
 			
 		});
