--- a/03script/20200212_jquery/test06.html
+++ b/03script/20200212_jquery/test06.html
@@ -39,7 +39,7 @@
 
 		.bar{
 			width: 200px; height: 3px; 
-			position: relative; left: 200px;
+			position: relative;
 			background-color: red;
 		}
 	</style>
